# opengen

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust_out
conformance/: CHECKLIST.md  README.md
conformance/patches/: cycle_440.genexpr  dcblock_impulse.genexpr  dcblock_step.genexpr  delay_echo.genexpr  history_counter.genexpr  history_read_after_write.genexpr  phasor_incr_order.genexpr  range_inverted_bounds.genexpr  sah_latch.genexpr  slide_step.genexpr  triangle_duty.genexpr
conformance/patches/ops/: op_abs.genexpr  op_absdiff.genexpr  op_acos.genexpr  op_acosh.genexpr  op_add.genexpr  op_and.genexpr  op_asin.genexpr  op_asinh.genexpr  (+63 more)
conformance/render/: patches.json  render_host.maxpat  render_runner.js
crates/opengen-analysis/: Cargo.toml
crates/opengen-analysis/src/: lib.rs  plot.rs  response.rs  stability.rs  wav.rs
crates/opengen-analysis/tests/: conformance.rs  delay_stability.rs  filters.rs  m1_exit.rs  m2_exit.rs  region_data.rs
crates/opengen-cli/: Cargo.toml
crates/opengen-cli/src/: main.rs
crates/opengen-cli/tests/: cli.rs
crates/opengen-cli/tests/fixtures/: counter.genexpr
crates/opengen-compile/: Cargo.toml
crates/opengen-emit-cpp/: Cargo.toml
crates/opengen-gendsp/: Cargo.toml
crates/opengen-gendsp/src/: boxtext.rs  build.rs  flatten.rs  json.rs  lib.rs  model.rs
crates/opengen-gendsp/tests/: build_fixtures.rs
crates/opengen-gendsp/tests/fixtures/: abs_fn.gendsp  bus.gendsp  bus_multi_send_sums.gendsp  codebox.gendsp  codebox_with_control_flow.gendsp  delay_echo.gendsp  delay_multi_tap.gendsp  expr_arg.gendsp  history_named_e2e.gendsp  mc_channel_constant_one.gendsp  minimal.gendsp  mr.gendsp  multi_cord_inlet.gendsp  param_arg.gendsp  setparam.gendsp
crates/opengen-genexpr/: Cargo.toml
crates/opengen-ir/: Cargo.toml
crates/opengen-ops/: Cargo.toml
crates/opengen-testkit/: Cargo.toml
docs/plans/: 2026-06-09-m1-handoff-prompt.md  2026-06-09-m1-vertical-slice.md  2026-06-09-m2-handoff-prompt.md  2026-06-09-opengen-design.md  2026-06-10-m2-language-and-conformance.md  2026-06-10-resonator-debug-handoff.md  2026-06-11-m3-kickoff-handoff.md  2026-06-13-post-session-handoff.md  2026-06-14-m3-cpp-emitter.md
docs/research/: gen_resonator_sign_bug.md  history_read_after_write_decision.md
tools/: extract-max-refs.sh  gen_op_sweeps.py  gen_render_host.py  max-refs.manifest  validate-with-genbo.sh  validate_gendsp.js
(+55 files in other folders)
