[package]
name = "opengen-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opengen-compile.workspace = true
opengen-genexpr.workspace = true
opengen-ops.workspace = true
opengen-testkit.workspace = true
rustfft = "6"
hound = "3"
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }
