[package]
name = "opengen-gendsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opengen-ir.workspace = true
opengen-ops.workspace = true
opengen-genexpr.workspace = true

[dev-dependencies]
opengen-testkit.workspace = true
opengen-ops.workspace = true
opengen-ir.workspace = true
